--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,3 +9,12 @@
 .Form{
   box-shadow: 0px 0px 20px black;
 }
+
+.form-body{
+  max-height: 68vh;
+}
+
+.form-error-msg{
+  color: red;
+  font-size: small;
+}
